# chronosphere

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Makefile  PRD.txt  README.md  alembic.ini  check_live_api.py  dev.ps1  diagnose_pandascore.py  diagnose_steam.py  docker-compose.yml  main.py  pyproject.toml  simulate_gsi.py  test_api.py  verify_full_stack.py  verify_output.txt  verify_pipeline.py  verify_websockets.py
alembic/: env.py
alembic/versions/: a06c774e3bf9_initial_migration.py
app/: models.py
app/api/: __init__.py  matches.py
app/core/: config.py  db.py  globals.py  rate_tracker.py  redis.py  state.py  websockets.py
app/ingest/: main.py
app/ml/: buffer.py  collect.py  features.py  incremental.py  model.py  train.py  versioning.py
app/ml/models/: model_latest.json
app/models/: __init__.py
app/services/: gemini.py  opendota.py  pandascore.py  steam.py  stratz.py
app/worker/: batcher.py  retrain.py  worker.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package.json  vite.config.ts
frontend/src/: App.jsx  App.tsx  index.css
frontend/src/components/: Dashboard.jsx  Dashboard.tsx  FeaturedMatch.tsx  Icons.tsx  Layout.tsx  MatchBadge.tsx  MatchCard.tsx  MispricingGauge.tsx  ProbabilityRing.tsx  StatCard.tsx  index.ts
frontend/src/hooks/: useWebSocket.js
frontend/src/pages/: About.tsx  AboutPage.tsx  AccuracyPage.tsx  ContactPage.tsx  HomePage.tsx  MatchDetailPage.tsx  MatchesPage.tsx  (+2 more)
scripts/: inspect_data.py  test_betting.py
tests/: conftest.py  test_features.py  test_ingest.py  test_ml.py  test_services.py
(+2 files in other folders)
