[project]
name = "chronosphere"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arq>=0.26.3",
    "asyncpg>=0.31.0",
    "fastapi>=0.123.5",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "numpy>=2.3.5",
    "prometheus-client>=0.23.1",
    "pydantic-settings>=2.12.0",
    "redis>=5.3.1",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
    "websockets>=15.0.1",
    "xgboost>=3.1.2",
]
